<resources>
    <string name="app_name">Tegola Mobile</string>

    <string name="edit">Edit</string>
    <string name="apply">Apply</string>
    <string name="commit_changes">Commit Changes</string>
    <string name="revert_changes">Revert Changes</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="install">Install</string>
    <string name="uninstall">Uninstall</string>
    <string name="get_list">Get List</string>
    <string name="Progress">Progress</string>

    <string name="android_device_info">Device Info</string>
    <string name="cpu_abi">CPU_ABI</string>
    <string name="api_level">API Level</string>

    <string name="srvr_provider_type__gpkg__manage_gpkg_bundles">Manage</string>
    <string name="srvr_config_type__local__manage_files__config">Config Files</string>

    <string name="srvr_config_type__local__manage_geopackage_bundles">Geopackage Bundles</string>
    <string name="srvr_provider_type__gpkg__no_geopackage_bundles_installed">**NO GEOPACKAGE BUNDLES INSTALLED**</string>
    <string name="srvr_provider_type__gpkg__no_geopackage_bundles_installed__alert_msg">Tegola MVT server cannot be started without installing and selecting a geopackage-bundle.\n\nPlease install a geopackage-bundle now.</string>
    <string name="activity_title__install_gpkg_bundle">Install Geopackage Bundle</string>
    <string name="lbl__remote_gpkg_bundle__root_url">Root URL</string>
    <string name="lbl__remote_gpkg_bundle__name">GPKG Bundle - Name</string>
    <string name="lbl__remote_gpkg_bundle__ver_props">GPKG Bundle - Version Properties File</string>
    <string name="lbl__local_gpkg_bundle__name">Local (Destination) - Name</string>
    <string name="lbl__install_gpkg_bundle__file_progress">geopackage-bundle file:</string>
    <string name="srvr_provider_type__gpkg__no_geopackage_bundle_props_installed">**NO GEOPACKAGE BUNDLE PROPS INSTALLED**</string>

    <string name="srvr_config_type__local__no_config_files_found">**NO LOCAL CONFIG .toml FILES FOUND**</string>
    <string name="srvr_config_type__local__no_config_files_found__alert_msg">Tegola MVT server cannot be started without selecting a config TOML file.\n\nPlease import a config TOML file from the sdcard or your Google Drive, or alternatively change config type to \"remote\".</string>
    <string name="srvr_config_type__local__select_config">**PLEASE SELECT LOCAL CONFIG .toml FILE**</string>
    <string name="srvr_provider_type__gpkg__no_geopackage_bundle_configs_installed__alert_msg">Tegola MVT server cannot be started without installing and selecting a geopackage-bundle and config.\n\nPlease install a geopackage-bundle/config now.</string>

    <!-- this is the title of the FileChooser activity - for selecting a TOML file from SD card -->
    <string name="choose_file">Select Tegola config TOML file</string>

    <string name="activity_title__config_file_viewer">Tegola Config TOML File Viewer</string>

    <string name="srvr_config_type__remote__no_url_specified">**NO REMOTE CONFIG .toml URL SPECIFIED**</string>
    <string name="srvr_config_type__remote__no_url_specified__alert_msg">Tegola MVT server cannot be started without specifying a config TOML URL.\n\nPlease specify one, or alternatively change config type to \"local\".</string>
    <string name="srvr_console_ouput">Server Console Output:</string>

    <string name="gpkg_bundle__root_url__default">sacontreras.github.io/tegola-mobile-gpkg-bundle</string>
    <string name="fixed__remote_gpkg_bundle__root_url__tail"></string>
    <string-array name="gpkg_bundles__available">
        <item>athens:default,large-layers-partitioned,test-minimal</item>
        <item>harare:default</item>
    </string-array>

    <string-array name="remote_tile_servers__canonical">
        <item>https://osm.tegola.io</item>
        <item>https://bpqmmr7g4k.execute-api.us-west-2.amazonaws.com/dev</item>
    </string-array>
    <string name="no_valid_canonical_remote_tile_server_urls_found">**NO VALID CANONICAL REMOTE TILE SERVER URLs**</string>
    <string name="no_valid_canonical_remote_tile_server_urls_found__alert_msg">Cannot start maps without any valid canonical remote tile server URLs configured.\n</string>

    <string name="open_tile_stream">START MAPS</string>
    <string name="close_tile_stream">STOP MAPS</string>
</resources>
