<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InstallGpkgBundleActivity">

    <LinearLayout
        android:id="@+id/sect__intall_gpkg__heading"
        style="@style/Section_Heading">

        <RelativeLayout
            style="@style/Section_Heading_Content">

            <ImageButton
                android:id="@+id/btn_install_remote_geopackage_bundle__cancel"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:gravity="bottom"
                android:src="@drawable/ic_clear_black_24dp"
            />

            <TextView
                android:id="@+id/tv_sect_heading_lbl__install_gpkg"
                style="@style/Section_Heading_Content_Label"
                android:layout_alignBottom="@+id/btn_install_remote_geopackage_bundle__cancel"
                android:layout_alignTop="@+id/btn_install_remote_geopackage_bundle__cancel"
                android:layout_centerVertical="false"
                android:layout_toLeftOf="@+id/btn_install_remote_geopackage_bundle__cancel"
                android:layout_toStartOf="@+id/btn_install_remote_geopackage_bundle__cancel"
                android:text="@string/activity_title__install_gpkg_bundle"
            />
        </RelativeLayout>

        <View
            android:id="@+id/vw_sect_heading_underscore__install_gpkg"
            style="@style/Section_Heading_Underscore"
        />

    </LinearLayout>

    <!-- install gpkg bundle - selection - BEGIN -->
    <LinearLayout
        style="@style/Section_Content">

        <!-- install gpkg bundle - selection - repo container URL: BEGIN -->
        <LinearLayout
            android:id="@+id/sect_content__item__gpkg_bundle_sel__repo_container_url"
            style="@style/Section_Content_Item">

            <TextView
                android:id="@+id/tv_lbl__install_gpkg_bundle__repo_container_url"
                style="@style/Section_Content_Item_Label"
                android:paddingTop="15dp"
                android:text="@string/lbl__remote_gpkg_bundle__root_url"
                android:visibility="visible"/>

            <RelativeLayout
                android:id="@+id/remote_gpkg_bundle__root_url__container"
                style="@style/Section_Content_Item_Content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_lbl_remote_gpkg_bundle__root_url__http_proto_prefix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="2dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="https://"
                />

                <EditText
                    android:id="@+id/edt_remote_gpkg_bundle__root_url"
                    style="@style/edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/tv_lbl_remote_gpkg_bundle__root_url__http_proto_prefix"
                    android:layout_toRightOf="@id/tv_lbl_remote_gpkg_bundle__root_url__http_proto_prefix"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:imeOptions="actionDone"
                    android:inputType="textUri"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="14sp"/>

            </RelativeLayout>

        </LinearLayout>
        <!-- install gpkg bundle - selection - repo container URL: END -->

        <!-- install gpkg bundle - selection - name: BEGIN -->
        <LinearLayout
            android:id="@+id/sect_content__item__gpkg_bundle__spec"
            style="@style/Section_Content_Item"
            android:paddingTop="20dp">

            <RelativeLayout
                android:id="@+id/remote_gpkg_bundle__name__heading__container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_remote_gpkg_bundle__name__get_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:text="@string/get_list"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_lbl__remote_gpkg_bundle__name"
                    style="@style/Section_Content_Item_Label"
                    android:layout_alignBottom="@id/btn_remote_gpkg_bundle__name__get_list"
                    android:layout_alignTop="@id/btn_remote_gpkg_bundle__name__get_list"
                    android:layout_toLeftOf="@id/btn_remote_gpkg_bundle__name__get_list"
                    android:layout_toStartOf="@id/btn_remote_gpkg_bundle__name__get_list"
                    android:gravity="center_vertical"
                    android:text="@string/lbl__remote_gpkg_bundle__name"
                    android:visibility="visible"
                />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/remote_gpkg_bundle__name__container"
                style="@style/Section_Content_Item_Content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/ibtn_help_gpkg_name"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_help_outline_black_24dp"
                    android:tint="@android:color/white" />

                <EditText
                    android:id="@+id/edt_remote_gpkg_bundle__name"
                    style="@style/edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="false"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/ibtn_help_gpkg_name"
                    android:gravity="center_vertical"
                    android:imeOptions="actionDone"
                    android:inputType="textUri"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="14sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/remote_gpkg_bundle__ver_props__heading__container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_lbl__remote_gpkg_bundle__ver_props"
                    style="@style/Section_Content_Item_Label"
                    android:gravity="center_vertical"
                    android:text="@string/lbl__remote_gpkg_bundle__ver_props"
                    android:visibility="visible"
                    />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/remote_gpkg_bundle__ver_props__container"
                style="@style/Section_Content_Item_Content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/ibtn_help_gpkg_props_file"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_help_outline_black_24dp"
                    android:tint="@android:color/white" />

                <EditText
                    android:id="@+id/edt_remote_gpkg_bundle__ver_props"
                    style="@style/edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="false"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/ibtn_help_gpkg_props_file"
                    android:gravity="center_vertical"
                    android:imeOptions="actionDone"
                    android:inputType="textUri"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="14sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/local_gpkg_bundle__name__heading__container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_lbl__local_gpkg_bundle__name"
                    style="@style/Section_Content_Item_Label"
                    android:gravity="center_vertical"
                    android:text="@string/lbl__local_gpkg_bundle__name"
                    android:visibility="visible"
                />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/local_gpkg_bundle__name__container"
                style="@style/Section_Content_Item_Content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_local_gpkg_bundle__name"
                    style="@style/edittext"
                    android:gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentStart="true"
                    android:imeOptions="actionDone"
                    android:inputType="textUri"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="14sp"/>

            </RelativeLayout>

        </LinearLayout>
        <!-- install gpkg bundle - selection - name: END -->

        <!-- install gpkg bundle - DO IT button - name: BEGIN -->


        <RelativeLayout
            style="@style/Section_Content_Item_Content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/btn_install_remote_gpkg_bundle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:drawableLeft="@drawable/ic_download_black_24dp"
                android:drawablePadding="5dp"
                android:text="@string/install"
                />

        </RelativeLayout>
        <!-- install gpkg bundle - DO IT button - END -->

        <!-- install gpkg bundle - progress - name: BEGIN -->
        <LinearLayout
            android:id="@+id/sect_content__item__install_remote_gpkg_bundle__progress"
            style="@style/Section_Content_Item"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/tv_lbl__install_gpkg_bundle__progress"
                style="@style/Section_Content_Item_Label"
                android:text="@string/Progress"
                android:visibility="visible"
            />

            <RelativeLayout
                style="@style/Section_Content_Item_Content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_lbl__install_gpkg_bundle__file_download_progress"
                    style="@style/Section_Content_SubItem_Label"
                    android:layout_width="wrap_content"
                    android:text="@string/lbl__install_gpkg_bundle__file_progress"
                    android:visibility="visible"
                />

                <TextView
                    android:id="@+id/tv_val__install_gpkg_bundle__file_download_progress"
                    style="@style/Section_Content_SubItem_Label"
                    android:text=""
                    android:visibility="visible"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentStart="false"
                    android:layout_toRightOf="@+id/tv_lbl__install_gpkg_bundle__file_download_progress"
                    android:layout_toEndOf="@+id/tv_lbl__install_gpkg_bundle__file_download_progress"
                />

                <ProgressBar
                    android:id="@+id/pb"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_lbl__install_gpkg_bundle__file_download_progress"
                />

                <TextView
                    android:id="@+id/tv_val__install_gpkg_bundle__file_download_progress__bytes"
                    style="@style/Section_Content_SubItem_Label"
                    android:layout_below="@+id/pb"
                    android:text=""
                    android:textAlignment="center"
                    android:visibility="visible" />

            </RelativeLayout>

        </LinearLayout>
        <!-- install gpkg bundle - progress - name: END -->

    </LinearLayout>

</LinearLayout>
